-----Etherate 0.13 Beta 2017-07

[FEATURE] Added enhancement #20; Test if interface is IFF_UP && IFF_RUNNING

[MAJOR] Fixed issue #19; Quality Tests are stil very buggy

[MINOR] Fixed issue #23; Regression bug with speed limit display on Rx host

[MINOR] Fixed issue #11; Uneeded +1 with result print on latency_test()

[MINOR] Updated documentation regarding usage and troubleshooting

[MINOR] Cody tidy up with perrors, more work to standardise lower case naming of variables, typos etc



-----Etherate 0.12 Beta 2017-05

[FEATURE] Added enhancement #16; PACKET_QDISC_BYPASS

[FEATURE] Added enhancement #13; Remove the htonll() and ntohll() functions

[FEATURE] Added enhancement #18; Inline the build_tlv() and build_sub_tlv() functions

[MINOR] Finally finished migrating from C++ to C

[MINOR] Fixed issue #17; Multiple ioctl() calls have no error checking

[MINOR] Fixed issue #15; cli_args() IF_NAME copy error

[MINOR] Fixed issue #14; Make strncpy() zero value safe

[MINOR] Fixed issue #12; Function prototype is missing parameter setup_frame()

[MINOR] Fixed error with double close() on socket file descriptor

[MINOR] Fixed missing net/if.h include

[MINOR] Added error check for fclose() in cli_args()

[MINOR] Cody tidy up, started to standardise lower case naming of variables



-----Etherate 0.11 Beta 2017-03

[MAJOR] Fixed issue #5; -Q option not working, 100% frame loss

[MINOR] Fixed issue #8; LeakSanatisor found leak with "-h" and several "return"s

[MINOR] Fixed issue #7; File descriptors left open in list_interfaces()

[MINOR] Fixed issue #6; Interface selectiom not working by name and list_interfaces() shows the wrong MAC address

[MINOR] Fixed seg fault when missing arguments to -Q, "sudo ./etherate -I 11 -Q -r"

[MINOR] Fixed blocks at exit used for delay_test() not being free()'ed

[MINOR] Tidied exit codes to use EXIT_SUCCCESS/EXIT_FAILURE



-----Etherate 0.10 Beta 2016-09

[FEATURE] Added DEI option for single and double tagged VLANs.
